@@ -146,7 +146,7 @@ bool CGUIScrollBar::OnEvent(const SEvent& event)
 					// thanks to tommi by tommi for another bugfix
 					// everybody needs a little thanking. hallo niko!;-)
 					setPos(	getPos() +
-							( (s32)event.MouseInput.Wheel * SmallStep * (Horizontal ? 1 : -1 ) )
+							( (event.MouseInput.Wheel < 0 ? -1 : 1) * SmallStep * (Horizontal ? 1 : -1 ) )
 							);
 
 					SEvent newEvent;
